[project]
name = "call-me-maybe"
version = "0.1.0"
description = "42 School project: function calling with constrained decoding"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy",
    "pydantic",
    "rich",
    "huggingface-hub",
    "transformers",
    "torch==2.7.1+cpu",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "flake8",
    "mypy",
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "llm_sdk",
    "llm_sdk.*",
]
follow_imports = "skip"
ignore_missing_imports = true
